--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -2,26 +2,52 @@
 <h1 class="text-center mt-4" id="index-header">Add Location</h1>
 <div class="container">
 <div class="row justify-content-center">
+<body>
+
+<p>Click the button to get your coordinates.</p>
+
+<button onclick="getLocation()">Try It</button>
+
+<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(savePosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+
+  function savePosition(position) {
+    document.getElementById("text_long").value = position.coords.longitude;
+    document.getElementById("text_lat").value = position.coords.latitude;
+}
+}
+
+
+</script>
     <div class="col-10">
     <%= form_with scope: :location, url: locations_path, local: true  do |f| %>
         <div class="form-group ">
             <%= f.label :address, class: "col-2 col-form-label text-info" %>
             <div class="col-10">
-            <%= f.text_field :address, class: "form-control", placeholder: "Address" %>
+            <%= f.text_field :address, class: "form-control", placeholder: "Address"%>
             </div>
         </div>
 
         <div class="form-group">
             <%= f.label :longitude, class: "col-2 col-form-label text-info"%>
             <div class="col-10">
-                <%= f.number_field :longitude,rows: 8, class: "form-control" ,placeholder: "Longitude" %>
+                <%= f.number_field :longitude,rows: 8, class: "form-control" ,placeholder: "Longitude", id: "text_long"  %>
             </div>
         </div>
 
         <div class="form-group">
             <%= f.label :latitude, class: "col-2 col-form-label text-info"%>
             <div class="col-10">
-                <%= f.number_field :latitude,rows: 8, class: "form-control" ,placeholder: "Latitude" %>
+                <%= f.number_field :latitude,rows: 8, class: "form-control" ,placeholder: "Latitude", id: "text_lat" %>
             </div>
         </div>
 
@@ -34,4 +60,6 @@
         <%= link_to ' Cancel ', root_path, class: "text-info" %>
     </div>
 </div>
+
 </div>
+</body>
