--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -8,10 +8,43 @@
 
 <button onclick="getLocation()">Try It</button>
 
-<p id="demo"></p>
+    <div class="col-10">
+    <%= form_with scope: :location, url: locations_path, local: true  do |f| %>
+        <div class="form-group ">
+            <%= f.label :address, class: "col-2 col-form-label text-info" %>
+            <div class="col-10">
+            <%= f.text_field :address, class: "form-control", placeholder: "Address"%>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <%= f.label :longitude, class: "col-2 col-form-label text-info"%>
+            <div class="col-10">
+                <%= f.text_field :longitude,rows: 8, class: "form-control" ,placeholder: "Longitude", id: "text_long"  %>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <%= f.label :latitude, class: "col-2 col-form-label text-info"%>
+            <div class="col-10">
+                <%= f.text_field :latitude,rows: 8, class: "form-control" ,placeholder: "Latitude", id: "text_lat" %>
+            </div>
+        </div>
+
+        <div class="form-group row justify-content-center">
+                <%= f.submit class: "btn btn-outline-info btn-lg" %>
+                </div>
+            <% end %>
+        </div> 
+    <div class="mb-3">
+        <%= link_to ' Cancel ', root_path, class: "text-info" %>
+    </div>
+</div>
+
+</div>
 
 <script>
-var x = document.getElementById("demo");
+
 
 function getLocation() {
   if (navigator.geolocation) {
@@ -28,38 +61,4 @@ function getLocation() {
 
 
 </script>
-    <div class="col-10">
-    <%= form_with scope: :location, url: locations_path, local: true  do |f| %>
-        <div class="form-group ">
-            <%= f.label :address, class: "col-2 col-form-label text-info" %>
-            <div class="col-10">
-            <%= f.text_field :address, class: "form-control", placeholder: "Address"%>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <%= f.label :longitude, class: "col-2 col-form-label text-info"%>
-            <div class="col-10">
-                <%= f.number_field :longitude,rows: 8, class: "form-control" ,placeholder: "Longitude", id: "text_long"  %>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <%= f.label :latitude, class: "col-2 col-form-label text-info"%>
-            <div class="col-10">
-                <%= f.number_field :latitude,rows: 8, class: "form-control" ,placeholder: "Latitude", id: "text_lat" %>
-            </div>
-        </div>
-
-        <div class="form-group row justify-content-center">
-                <%= f.submit class: "btn btn-outline-info btn-lg" %>
-                </div>
-            <% end %>
-        </div> 
-    <div class="mb-3">
-        <%= link_to ' Cancel ', root_path, class: "text-info" %>
-    </div>
-</div>
-
-</div>
 </body>
